Added login support to volunteer and doctor
