# server/service/VolunteerService.js
@@ -1,6 +1,7 @@
 'use strict';
 
 const MongoDB = require("../database/DataBase")
+const {EmailService} = require("./EmailService")
 
 var COLLECTION_NAME = "Volunteers";
 
@@ -58,6 +59,21 @@ class VolunteerService {
         else {
           MongoDB.insertOne(COLLECTION_NAME,body, this.MongoClient).then(resolve, reject);
         }
+      });
+    });
+  }
+
+  loginEmailVolunteer(body) {
+    return new Promise((resolve, reject) => {
+      MongoDB.findOne(COLLECTION_NAME, { tz: body.volTz }, this.MongoClient).then((result) => {
+        if (result == null) reject("Volunteer not found.");
+        else {
+          var emailService = new EmailService();
+          emailService.sendEmail(result.email, {'title': body.emailTitle, 'body': body.emailBody });
+          resolve("Login email sent.")
+        }
+      }).catch((error) => {
+        reject(error)
       });
     });
   }
